<?xml version="1.0"?>
<package>
  <name>rqt_pr2_hand_syntouch_sensor_interface</name>
  <version>0.0.1</version>
  <description>The rqt_pr2_hand_syntouch_sensor_interface package</description>

  <maintainer email="brandonsalmon22@gmail.com">Brandon Salmon</maintainer>

  <license>TBD</license>
  <author email="brandonsalmon22@gmail.com">Brandon Salmon</author>
  <author email="aaronbmwhitehead@gmail.com">Aaron Whitehead</author>
  <author email="shawnwhite269@gmail.com">Shawn White</author>
  <author email="elmiles93@live.com">Edward Miles</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/interface.xml"/>
  </export>
</package>
